# kalas

./: .gitignore  LICENSE  LICENSE.txt  README.md  hoge.txt  log.0.txt  log.1.txt  log.2.txt  log.4.txt  log.txt  memo.txt  src.tar
src/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  Makefile.org  blockedMatrix.c  blockedMatrix.h  bool.h  clBLAS.cc  clState.c  clState.h  clerr.c  clerr.h  cmake_install.cmake  cputhread.h  debug.h  divideMatrix.c  gemm.c  kadbg.c  kadbg.h  kalas.c  kalas.h  kalasState.c  kalasState.h  main.c  matrix  matrix.c  matrix.h  matrix_helper.c  myDebug.h  ringQueue.c  ringQueue.h  sample.c  sample_org.c  sgemm  subMatrix.c  subMatrix.h  test  test.c  testGEMM.c
src/tmp/: ACMLlog-2014-10-11-19-36-57.txt  Makefile.dgemm  Makefile.sgemm  benchmark-dgemm  benchmark-dgemm.c  benchmark-sgemm  benchmark-sgemm.c  dgemm  dgemm.c  example_sgemm  example_sgemm.c  makeSample  makeSample.c  original.txt  sgemm  sgemm.c  test  thread-dgemm.c  thread_test.c
