cmake_minimum_required (VERSION 2.8)
project(kalas)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_C_FLAGS "-std=c99 -O2 -ggdb")
set(CMAKE_C_FLAGS_DEBUG "-std=c99 -O2 -ggdb")
set(CMAKE_C_FLAGS_RELEASE "-std=c99 -O2 -ggdb")
set(AMDAPPSDKROOT "/opt/AMDAPPSDK-2.9-1")
set(CLBLASROOT "/opt/clBLAS")
set(OPENBLASROOT "/opt/OpenBLAS")

include_directories( "${AMDAPPSDKROOT}/include" "${CLBLASROOT}/include" "${OPENBLASROOT}/include")
link_directories( "${AMDAPPSDKROOT}/lib/x86_64" "${CLBLASROOT}/lib64" "${OPENBLASROOT}/lib")
add_executable(sample sample.c kalasState.c clerr.c gemm.c matrix.c kadbg.c)
target_link_libraries(sample m clBLAS OpenCL openblas)
